# copySegment

./: CMakeLists.txt  copySegment.h  geometryTraits.h  main.cpp  spatialTraits.h  takeTypeDefault.h  typeDeduct.h  type_name.h
detail/: copySegment.hh  cudaPrimitives.h  cuda_types.h  kernel.cu  myPoint.h  myPointTraits.cpp  myPointType.h  mySpatial.h  mySpatialTraits.cpp  mySpatialType.h
